--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   jpa:
     database: H2
+    hibernate:
+      ddl-auto: update
   datasource:
     drive-class-name: org.h2.Driver
     url: jdbc:h2:tcp://localhost/~/test
